--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kalyan King</title>
+  <title>DK BRAND</title>
   <style>
     body {
       margin: 0;
@@ -115,7 +115,7 @@
 
   <div class="card">
     <img src="satta.jpg" alt="Logo">
-    <div class="title">𝐒𝐈𝐊𝐀𝐍𝐃𝐄𝐑 𝐁𝐀𝐇𝐈 𝐕𝐈𝐏 𝐌𝐀𝐓𝐊𝐀</div>
+    <div class="title">DK BRAND</div>
     <div class="subtitle"><span id="subs">43,900</span> Subscribers</div>
     <div class="vip-text">✨ All Game VIP Charts Available Here ✨</div>
 
@@ -178,3 +178,4 @@
 
 </body>
 </html>
+
