--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <img src="satta.jpg" alt="Logo">
     <div class="title">DK BRAND</div>
     <div class="subtitle"><span id="subs">43,900</span> Subscribers</div>
-    <div class="vip-text">✨ All Game VIP Charts Available Here ✨</div>
+    <div class="vip-text">✨ INDIA`S NO.1 CRICKET TIPPER ✨</div>
 
     <button class="timer-btn" id="countdown">Free Joining Ends In 15 Seconds</button>
 
@@ -178,4 +178,5 @@
 
 </body>
 </html>
+
 
